--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "poppins", sans-serif;
-  /* background: var(--b-grey); */
   color: #fff;
 }
 body {
@@ -150,6 +149,7 @@ a:hover {
   line-height: 3rem;
   height: 4.5rem;
   overflow: hidden;
+  cursor: pointer;
 }
 .active-faq {
   height: auto;
