--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ a {
 }
 :root {
   --b-green: rgb(0, 152, 111);
+  --b-l-green: rgb(9, 71, 54);
   --b-grey: rgb(29, 32, 38);
 }
 
@@ -47,7 +48,7 @@ a {
   height: 250px;
   background: var(--b-grey);
   position: absolute;
-  top: 15vh;
+  top: 10vh;
   left: 0;
   padding-bottom: 10rem; /*change this if needed*/
   transition: all 0.5s;
@@ -138,6 +139,7 @@ a:hover {
 }
 
 .Products {
+  /* design this soon */
 }
 
 /* FAQ section */
@@ -154,7 +156,7 @@ a:hover {
 .active-faq {
   height: auto;
   transition: all 0.5s;
-  border: 1px solid rgb(124, 246, 10);
+  border: 1px solid var(--b-green);
 }
 
 /* Rest decoration */
@@ -164,6 +166,18 @@ a:hover {
 }
 .location {
   margin: 1rem;
+}
+#locate-btn {
+  margin: 1rem auto;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  background: var(--b-green);
+  border-radius: 1rem;
+  padding: 1rem 1.5rem;
+  cursor: pointer;
+  border: 0;
+  outline: 0;
 }
 .social-media {
   margin-top: 1.5rem;
@@ -198,6 +212,14 @@ a:hover {
 }
 .scroll {
   color: rgb(238, 130, 36);
+}
+.locate-off {
+  display: none;
+  transition: all 0.5s;
+}
+.locate-on {
+  display: block;
+  transition: all 0.5s;
 }
 
 /* Media queries */
