--- a/style.css
+++ b/style.css
@@ -159,6 +159,47 @@ a:hover {
   border: 1px solid var(--b-green);
 }
 
+/* Write to us section */
+.write-here {
+  text-decoration: underline;
+  cursor: pointer;
+}
+.contact-form-style {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.input-style {
+  min-width: 100px;
+  width: 80vw;
+  max-width: 880px;
+  padding: 0.5rem 1rem;
+  height: 3rem;
+  border-radius: 0.75rem;
+  color: #000;
+}
+.input-message {
+  width: 80vw;
+  max-width: 880px;
+  padding: 1rem 1rem;
+  border-radius: 0.75rem;
+  color: #000;
+}
+input::placeholder {
+  color: #000;
+}
+.submit-button-style {
+  background: var(--b-l-green);
+  color: #fff;
+  width: 40%;
+  border: 0;
+  outline: 0;
+  cursor: pointer;
+}
+.toggle-form {
+  display: none;
+}
+
 /* Rest decoration */
 .section-name {
   font-size: 2rem;
